# jaegis-RAVERSE

./: .env.example  .gitignore  AUGMENT_CODE_CONFIG_WORKING.json  AUGMENT_CODE_FINAL_FIX.md  AUGMENT_CODE_MCP_CONFIG_v1.0.8.json  AUGMENT_CODE_SETUP_v1.0.8.md  AUGMENT_CODE_UPDATE_INSTRUCTIONS.md  AUTOMATED_INSTALLATION_COMPLETE.md  AUTOMATED_INSTALLATION_GUIDE.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_MCP_PROXY_COMPLETE.md  CLOUDFLARE_MCP_PROXY_DEPLOYMENT_COMPLETE.md  CLOUDFLARE_MCP_PROXY_SETUP.md  CLOUDFLARE_WORKFLOWS_COMPLETE_SUMMARY.md  CLOUDFLARE_WORKFLOWS_SETUP.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETION_CHECKLIST.md  CRITICAL_ISSUES_RESOLUTION_COMPLETE.md  DATABASE_SETUP_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS_FINAL_REPORT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FILES_CREATED_THIS_SESSION.md  FINAL_ACTION_STEPS.md  FINAL_COMPLETION_REPORT.md  FINAL_INSTALLATION_STATUS.md  FINAL_NPX_RELEASE_REPORT.md  FINAL_NPX_RESOLUTION_SUMMARY.md  FINAL_PROJECT_COMPLETION.md  FINAL_RAVERSE_MCP_v1.0.10_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY_MCP_FIX.md  FREE_HOSTING_ARCHITECTURE_INTEGRATION_COMPLETE.md  FREE_HOSTING_HYBRID_CLOUD_ARCHITECTURE.md  GITHUB_DEPLOYMENT_GUIDE.md  IMMEDIATE_ACTION_REQUIRED.md  IMPLEMENTATION_COMPLETE.md  (+83 more)
.jules/: bolt.md
docs/: A2A_PROTOCOL_DESIGN.md  AI_AGENT_PIPELINE_GUIDE.md  ARCHITECTURE.md  COMPLETE_ARCHITECTURE_SPECIFICATION.md  DEEPCRAWLER_ANALYSIS.md  DEEPCRAWLER_API_REFERENCE.md  DEEPCRAWLER_ARCHITECTURE.md  DEEPCRAWLER_ETHICS_AND_LEGAL.md  DEEPCRAWLER_EXAMPLES.md  DEEPCRAWLER_GAP_ANALYSIS.md  DEEPCRAWLER_IMPLEMENTATION_PLAN.md  DEEPCRAWLER_USER_GUIDE.md  DEEP_RESEARCH_ANALYSIS.md  DEEP_RESEARCH_DOCUMENT_GENERATION.md  DEEP_RESEARCH_INTEGRATION_GUIDE.md  DEEP_RESEARCH_MIGRATION_GUIDE.md  DEEP_RESEARCH_MODEL_ASSIGNMENTS.md  DEEP_RESEARCH_TOOL_MAPPING.md  DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  MEMORY_CONFIGURATION_EXAMPLES.md  MEMORY_INTEGRATION_MIGRATION_GUIDE.md  ONBOARDING.md  ONLINE_DEPLOYMENT_GUIDE.md  PIPELINE_API_REFERENCE.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START_AI_FEATURES.md  RAVERSE_2_0_COMPLETE_INTEGRATION.md  SECURITY_MCP_CONFIG.md
examples/: comprehensive_demo.py  docker_quickstart.ps1  docker_quickstart.sh  options_comprehensive.json  options_example.json  pipeline_integration_example.py  scope_comprehensive.json  scope_example.json
jaegis-RAVERSE-mcp-server/: .env.example  .gitignore  .npmignore  ALL_35_TOOLS_IMPLEMENTED.md  CHANGELOG.md  COMPLETION_STATUS.md  DEPLOYMENT.md  DISTRIBUTION_COMPLETE.md  DOCKER_PUBLISHING_GUIDE.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  MCP_CLIENT_SETUP.md  MCP_PROTOCOL_FIX.md  MCP_SETUP_GUIDE.md  NPM_PUBLISHING_GUIDE.md  NPX_USAGE_GUIDE.md  PACKAGE_DISTRIBUTION.md  PHASE5_BUILD_COMPLETE.md  PHASE5_COMPLETE.md  PHASE5_PUBLISHING_CHECKLIST.md  PHASES_1_TO_4_COMPLETE.md  PUBLISHING.md  PYPI_PUBLISHING_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_WIZARD_GUIDE.md  SETUP_WIZARD_IMPLEMENTATION_COMPLETE.md  TOOLS_REGISTRY.md  TOOLS_REGISTRY_COMPLETE.md  TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  install.ps1  install.sh  (+7 more)
jaegis-RAVERSE-mcp-server/jaegis_raverse_mcp_server/: __init__.py  auto_installer.py  cache.py  config.py  database.py  errors.py  logging_config.py  mcp_protocol.py  server.py  setup_guide.py  setup_wizard.py  tools_analysis_advanced.py  tools_binary_analysis.py  tools_infrastructure.py  tools_knowledge_base.py  tools_management.py  tools_nlp_validation.py  tools_system.py  tools_utilities.py  tools_web_analysis.py  types.py
jaegis-RAVERSE-mcp-server/tests/: __init__.py  test_tools.py
mcp/: jaegis-RAVERSE-mcp-server.md
mcp-configs/: README.md
migrations/: deepcrawler_schema.sql
raverse-mcp-proxy/: .gitignore  README.md  index.js  package.json  verify-deployment.js  wrangler.toml
scripts/: run_tests.ps1  run_tests.sh
src/: app.py  execute_phase_8_validation.py  main.py  raverse_online_cli.py  requirements.txt  verify_integration.py  verify_memory_integration.py  verify_phase_7_completion.py
tests/: conftest.py  test_ai_agent_pipeline.py  test_complete_architecture.py  test_deep_research_agents.py  test_deep_research_integration.py  test_disassembly_agent.py  test_multi_level_cache.py  test_online_agents.py  test_online_deepcrawler_agent.py  test_validation_agent.py
workflows-starter/: README.md  package-lock.json  package.json  (+3 more)
(+268 files in other folders)
